--- a/LeaveManagement/Views/LeaveTypes/Index.cshtml
+++ b/LeaveManagement/Views/LeaveTypes/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>S
-                @Html.DisplayNameFor(model => model.DateCreated)
+                @Html.DisplayNameFor(model => model.DefaultDays)
             </th>
             <th></th>
         </tr>
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DateCreated)
+                @Html.DisplayFor(modelItem => item.DefaultDays)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">
@@ -45,10 +45,3 @@
 }
     </tbody>
 </table>
-@section Scripts {
-<script>
-    $(document).ready(function () {
-        $('#tblData').DataTable();
-    });
-</script>
-}
